# lab_computer_graphics_1

./: CMakeLists.txt  README.md
external_src/imgui-1.51/: imgui.cpp
lab1-rasterization/: lab1_main.cpp  simple.frag  simple.vert
lab2-textures/: lab2_main.cpp  simple.frag  simple.vert
lab3-camera/: lab3_main.cpp
lab4-shading/: lab4_main.cpp  shading.frag
lab5-rendertotexture/: CMakeLists.txt  Engine.cpp  Engine.h  GameEntity.cpp  GameEntity.h  GameObject.cpp  GameObject.h  ObjectComponent.cpp  ObjectComponent.h  Renderable.h  Transformable.cpp  Transformable.h  lab5_main.cpp
lab5-rendertotexture/shaders/: postFx.frag  shading.frag  shading.vert
lab6-shadowmaps/: fbo.cpp  lab6_main.cpp  shading.frag  shading.vert  simple.frag
labhelper/: imgui_impl_sdl_gl3.cpp  labhelper.cpp
project/: ParticleSystem.cpp  ParticleSystem.h  main.cpp  particle.vert  shading.frag  simple.vert
scenes/: aim.mtl  bullet.mtl  diamante.mtl  gameOver.mtl  newTank.mtl  pyramid.mtl  simpleCube.mtl  terrain.mtl  ufo.mtl
